<resources>
    <string name="app_name">Johan Story</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    auth ui-->
    <string name="welcome">Hi, Welcome to</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="password_err">Password must contain at least 8 characters</string>
    <string name="not_filled_err">Field must be filled</string>
    <string name="button_text_signin">Sign In</string>
    <string name="button_text_register">Register</string>
    <string name="text_new_q">New to this app?</string>
    <string name="text_register">Register</string>
    <string name="input_email">Input email</string>
    <string name="input_password">Input password</string>
    <string name="input_name">Input name</string>

    <!--    story ui-->
    <string name="text_username">Username</string>
    <string name="text_description">This is story description</string>
    <string name="text_new">Add new story</string>
    <string name="retry">Retry</string>

    <!--    upload story ui-->
    <string name="upload_title">Upload New Story</string>
    <string name="btn_camera">Take a Pic</string>
    <string name="btn_upload">Upload</string>
    <string name="input_desc">Input story description</string>

    <!--    menu-->
    <string name="text_logout">Logout</string>
    <string name="title_activity_maps">Explore Stories</string>

    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="posted">Posted by %s</string>

</resources>